<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical">
	<LinearLayout
			android:id="@+id/LinearLayout02"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
		<Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_first"/>
		<Button android:id="@+id/Button02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_back"/>
		
	<Button android:id="@+id/Button03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_forward"></Button>
<Button android:id="@+id/Button04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_last"></Button>
<Button android:id="@+id/Button05" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_clear"></Button>
</LinearLayout><EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:text="http://" android:layout_width="fill_parent" android:maxLines="1" />
	<WebView android:id="@+id/WebView01" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>
